tests/compile_fail/machine_module/multiple_attrs.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module]
    #[machine_module]
    mod machine {}
}

fn main() {}
